# Benchmarking-Agentic-Data-Scientists

./: .env  .gitignore  README.md  pyproject.toml
config/: agentk.txt  mlebench.txt
src/: agentk_runner.py  autogluon_runner_cla.py  autogluon_runner_reg.py  download_data.py  download_description.py  run_experiment.py
