[project]
name = "Benchmarking-Agentic-Data-Scientists"
description = "A project to benchmark the performance of agentic data scientists in various tasks."
version = "0.1.0"
requires-python = ">=3.11,<3.14"

dependencies = [
    # Core
    "numpy",
    "pandas",
    "matplotlib",
    "scikit-learn",
    "jupyterlab",
    "kaggle>=1.8.2",

    # Runtime / API
    "openai",
    "httpx",
    "python-dotenv",
    "pydantic",
    "duckduckgo-search",

    # ML
    "torch",
    "xgboost",
    "lightgbm",
    "catboost",
    "seaborn",
    "pytorch-tabnet",

    # CLI utils
    "absl-py",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "uv",
    "black",
    "pytest",
    "pytest-asyncio",
]

# --- Tool Configurations ---
[tool.black]
line-length = 100

[tool.isort]
line_length = 100
profile = "black"
